# Next-Refuels

./: .dockerignore  .env.example  .gitattributes  .gitignore  README.md  deploy.sh  docker-compose.local.yml  docker-compose.prod.yml  manage.py  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
core/: api.py  api_views.py  schemas.py  signals.py  urls.py  views.py
core/admin/: __init__.py  actions.py  car_admin.py  fuelrecord_admin.py  region_admin.py  systemlog_admin.py  user_admin.py
core/clients/: element_car_client.py
core/middleware/: __init__.py  admin_gate.py  app_entry_redirect.py  auth_throttle.py
core/migrations/: 0004_alter_systemlog_action.py  0005_add_performance_indexes.py  0006_telegramlinktoken.py  0007_rename_fuel_historic_reg_fill_idx_fuel_record_histori_648c11_idx_and_more.py  0008_alter_systemlog_action.py  0009_user_must_change_password.py  0010_remove_user_zone.py  0011_delete_zone_model.py  0012_alter_systemlog_google_sheets_actions.py  0013_remove_fuelrecord_approved.py  0014_remove_fuelrecord_fuel_record_approve_99ad49_idx.py  0015_car_is_fuel_tanker.py  0016_fuelrecord_reporting_status.py  0017_fuelrecord_reporting_status_filled_at_idx.py  0018_remove_fuelrecord_excluded_duplicate.py
core/models/: __init__.py  car.py  fuel.py  region.py  system_log.py  telegram_link_token.py  user.py
core/refuel_bot/: main.py
core/services/: __init__.py  access_service.py  car_service.py  export_service.py  (+4 more)
docker/: Dockerfile.bot  Dockerfile.dev  Dockerfile.prod
docs/: ARCHITECTURE.md  FRONTEND_STYLE_AI_PROMPT.md  RUNBOOK.md  SECURITY.md  SPEC.md  TESTPLAN.md  TROUBLESHOOTING.md
frontend/: .env.example  next.config.mjs  package-lock.json  package.json  tsconfig.json
next_refuels/: asgi.py  urls.py  wsgi.py
scripts/: check-cert-expiry.sh  entrypoint.dev.sh  entrypoint.prod.sh  install-deps.py  next-warmup.mjs  test-local-deploy.sh  wait-for-db.py
(+76 files in other folders)
